syntax = "proto3";
option go_package = "/pb";

message req_pq_Request {
  string nonce = 1;
  int64 message_id = 2;
}

message req_pq_Response {
  string nonce = 1;
  string server_nonce = 2;
  int64 message_id = 3;
  int64 p = 4;
  int64 g = 5;
}

message req_DH_params_Request {
  string nonce = 1;
  string server_nonce = 2;
  int64 message_id = 3;
  int64 a = 4;
}

message req_DH_params_Response {
  string nonce = 1;
  string server_nonce = 2;
  int64 message_id = 3;
  int64 b = 4;
}

service authentication_service {
  rpc req_pq(req_pq_Request) returns (req_pq_Response) {}
  rpc req_DH_params(req_DH_params_Request) returns (req_DH_params_Response) {}
}
